# FlutterOggPiano

./: .gitmodules  CHANGELOG.md  LICENSE  README.md  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: CMakeLists.txt  OggPiano.cpp  OggPianoEngine.cpp  OggPianoEngine.h  OggPlayer.cpp  OggPlayer.h
android/src/main/kotlin/com/mandarin/flutter_ogg_piano/: AudioReader.kt  FlutterOggPianoPlugin.kt
example/: README.md  pubspec.yaml
example/android/: build.gradle
example/android/app/: build.gradle
example/android/app/src/debug/: AndroidManifest.xml
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/mandarin/flutter_ogg_piano_example/: MainActivity.kt
example/android/gradle/wrapper/: gradle-wrapper.properties
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/test/: widget_test.dart
ios/: flutter_ogg_piano.podspec
ios/Classes/: FlutterOggPianoPlugin.h  FlutterOggPianoPlugin.m  SwiftFlutterOggPianoPlugin.swift
lib/: flutter_ogg_piano.dart  tempFileExporter.dart
test/: flutter_ogg_piano_test.dart
